进行初始化设置，同时清除对本地设置相关文件的管理

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,6 @@ build/
 
 ### VS Code ###
 .vscode/
+!/src/main/resources/application.yml
+!/src/main/resources/generator-config.xml
+!/src/main/resources/jdbc.properties
