--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,6 @@
+server:
+  port: 8080
+
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -7,3 +10,16 @@ spring:
 
 mybatis:
   mapper-locations: classpath:mapper/*.xml
+
+# JWT配置
+jwt:
+  # 密匙KEY
+  secret: AnimalManagement
+  # HeaderKEY
+  tokenHeader: Authorization
+  # Token前缀字符
+  tokenPrefix: Animal-
+  # 过期时间 单位秒 1天后过期=86400 7天后过期=604800
+  expiration: 86400
+  # 配置不需要认证的接口
+  antMatchers: /login,/user/resetPasswordVerify
