--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -22,4 +22,4 @@ jwt:
   # 过期时间 单位秒 1天后过期=86400 7天后过期=604800
   expiration: 86400
   # 配置不需要认证的接口
-  antMatchers: /login,/user/resetPasswordVerify
+  antMatchers: /login,/user/resetPasswordVerify,/user/registerVerify
