实现了请求重置密码时的邮件发送

--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,11 @@
             <version>2.3.0</version>
         </dependency>
 
+        <!-- 以下是为了邮件  -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
