--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-mail</artifactId>
+            <version>2.2.1.RELEASE</version>
         </dependency>
     </dependencies>
 
