--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,15 +1,14 @@
 server:
   port: 443
-  #http2.enabled: true
-  #http2.hpack-encoder.dynamic-table-size: 8192
   ssl:
-    #enabled: true
+    enabled: true
     key-store-type: JKS
     key-store: file:/root/AnimalManagement/src/main/resources/certificate.jks
     key-store-password: Yf9#fheMS2Zi^9Cc
   #key-alias: server
   #protocol: TLS
-  #port: 443
+  http:
+    port: 80
 
 spring:
   datasource:
