--- a/src/main/resources/applicationTest.yml
+++ b/src/main/resources/applicationTest.yml
@@ -1,16 +1,16 @@
 server:
-  port: 8080
+  port: 443
   #http2.enabled: true
   #http2.hpack-encoder.dynamic-table-size: 8192
-  #ssl:
-    #enabled: true
-    #key-store-type: JKS
-    #key-store: file:/root/AnimalManagement/src/main/resources/certificate.jks
-    #key-store-password: Yf9#fheMS2Zi^9Cc
+  ssl:
+    enabled: true
+    key-store-type: JKS
+    key-store: file:/root/AnimalManagement/src/main/resources/certificate.jks
+    key-store-password: Yf9#fheMS2Zi^9Cc
   #key-alias: server
   #protocol: TLS
-  #http: 
-    #port: 80
+  http: 
+    port: 80
 
 spring:
   datasource:
