--- a/.gitignore
+++ b/.gitignore
@@ -33,4 +33,4 @@ build/
 .vscode/
 
 src/main/java/com/animalmanagement/config/HttpConfig.java
-#src/main/resources/application.yml
+src/main/resources/application.yml
