--- a/.gitignore
+++ b/.gitignore
@@ -34,4 +34,5 @@ build/
 
 src/main/java/com/animalmanagement/config/HttpConfig.java
 src/main/resources/application.yml
+src/main/resources/static/images/
 
