--- a/.gitignore
+++ b/.gitignore
@@ -35,4 +35,5 @@ build/
 src/main/java/com/animalmanagement/config/HttpConfig.java
 src/main/resources/application.yml
 src/main/resources/static/images/
+temp/
 
